# welder

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  conanfile.py
docs/: CMakeLists.txt  Doxyfile.in  api_mainpage.md  apilink.py  doxygen-extra.css  inject_reference.py  mkdocs.yml  patch_doxygen_header.py  pyproject.toml
docs/content/: architecture.md  header-only.md  index.md  reference.md  resolution.md
docs/content/backends/: index.md  lua.md  luabridge.md  multiple.md  python.md
docs/content/cookbook/: containers.md  custom-traversal.md  discovery.md  generated-trampolines.md  hello.md  index.md  inheritance.md  multilang.md  tack-welding.md  templates.md  virtuals.md
docs/content/guide/: annotations.md  bindability.md  binding-types.md  containers.md  cpp-docs.md  docstrings.md  enums.md  extending.md  faq.md  getting-started.md  index.md  inheritance.md  lua.md  namespaces-modules.md  naming.md  properties.md  return-policies.md  stubs.md  templates.md  trust-casters.md
docs/content/javascripts/: mermaid-zoom.js
docs/content/stylesheets/: extra.css
examples/: CMakeLists.txt
examples/cookbook/: CMakeLists.txt  README.md
examples/cookbook/01-hello/: CMakeLists.txt  check.py  hello.cpp
examples/cookbook/02-discovery/: CMakeLists.txt  check.py  inventory.cpp
examples/cookbook/03-inheritance/: CMakeLists.txt  check.py  garage.cpp
examples/cookbook/04-virtuals/: CMakeLists.txt  check.py  robots.cpp
examples/cookbook/05-generated-trampolines/: CMakeLists.txt  check.py  gen.cpp  machines.cpp  machines.hpp
examples/cookbook/06-templates/: CMakeLists.txt  boxes.cpp  check.py
examples/cookbook/07-multilang/: CMakeLists.txt  check.lua  check.py  journal.hpp  lua_module.cpp  lua_module_luabridge.cpp  py_module.cpp  stub_gen.cpp
examples/cookbook/08-tack-welding/: CMakeLists.txt  bindings.cpp  check.py  vecmath.hpp
examples/cookbook/09-custom-traversal/: CMakeLists.txt  bindings.cpp  check.py  sensorlib.hpp
examples/cookbook/10-containers/: CMakeLists.txt  check.py  gen.cpp  scene.cpp  scene.hpp
examples/lua_poc/: CMakeLists.txt  example.cpp
examples/luabridge_poc/: CMakeLists.txt  example.cpp
examples/python_poc/: CMakeLists.txt  example.cpp
examples/python_poc_headeronly/: CMakeLists.txt  example.cpp
examples/welder_module/: CMakeLists.txt  example.cpp
modules/: welder.cppm
src/: CMakeLists.txt
src/welder/: annotations.hpp  backend.hpp  bind_traits.hpp  bindable.hpp  carriage.hpp  concepts.hpp  containers.hpp  diag.hpp  doc.hpp  docs.hpp  lang.hpp  module.hpp  naming.hpp  reflect.hpp  version.hpp  vocabulary.hpp  welder.cppm  welder.hpp
src/welder/backends/: CMakeLists.txt  pybind11.hpp
src/welder/backends/lua/: overloads.hpp
src/welder/backends/lua/luacats/: backend.hpp  document.hpp  stub.hpp  type_map.hpp
src/welder/backends/lua/sol2/: backend.hpp  metamethods.hpp
src/welder/backends/python/: doc_style.hpp  operators.hpp
src/welder/detail/: config.hpp
src/welder/docs/: doxygen.hpp
src/welder/rods/: CMakeLists.txt
src/welder/rods/lua/: metamethods.hpp  overloads.hpp
src/welder/rods/python/: array_interface.hpp  doc_style.hpp  naming.hpp  operators.hpp  trampoline.hpp
tests/: CMakeLists.txt  conftest.py  pyproject.toml  test_caster.py  test_doc.py  test_enums.py  test_inheritance.py  test_methods.py  test_namespace.py  test_operators.py  test_resolution.py  test_trust.py  test_types.mypy-testing
tests/common/cpp/: chaining.hpp  copying.hpp  doc.hpp  enums.hpp  gen_opaque.hpp  gen_trampolines.hpp  inheritance.hpp  methods.hpp  namespace.hpp  naming.hpp  nested.hpp  opaque.hpp  operators.hpp  overloads.hpp  overridable.hpp  properties.hpp  resolution.hpp  retpolicy.hpp  stl.hpp  templates.hpp  unions.hpp
tests/core/: aggregate_defaults.cpp  backend_probe.cpp  containers.cpp  doc_cleandoc.cpp  doc_styles.cpp  naming.cpp  nested_types.cpp  opaque_containers.cpp  properties.cpp  protected_access.cpp  rod_probe.cpp  template_annotations.cpp  trampoline_slots.cpp  user_lang.cpp  weld_alias.cpp
tests/cpp/: bindings.cpp
tests/docs/: CMakeLists.txt  corpus.hpp  expected_atelier.hpp  gen.cpp
tests/doxyfilter/: CMakeLists.txt  Doxyfile.html.in  corpus.hpp  doxygen_e2e.py  expected_corpus.hpp  expected_hostile.hpp  hostile.hpp  run_and_compare.cmake
tests/lua/: CMakeLists.txt  helper.lua
tests/lua/cpp/: bindings.cpp  bindings_luabridge.cpp
tests/lua/cpp/neg/: field_unwelded.cpp  field_unwelded_luabridge.cpp
tests/lua/spec/: chaining_spec.lua  enums_spec.lua  inheritance_spec.lua  methods_spec.lua  namespace_spec.lua  naming_spec.lua  nested_spec.lua  operators_spec.lua  overloads_spec.lua  properties_spec.lua  resolution_spec.lua  retpolicy_spec.lua  templates_spec.lua  unions_spec.lua
tests/luacats/: .luarc.json  CMakeLists.txt  stub.golden.lua
tests/luacats/cpp/: stub_gen.cpp
tests/nanobind/: CMakeLists.txt
tests/nanobind/cpp/: bindings.cpp  caster.hpp
tests/nanobind/cpp/neg/: operand_not_welded.cpp
tests/pybind11/: CMakeLists.txt
tests/pybind11/cpp/: bindings.cpp  caster.hpp  doc.hpp  enums.hpp  inheritance.hpp  methods.hpp  namespace.hpp  operators.hpp  resolution.hpp  trust.hpp
tests/pybind11/cpp/neg/: container_of_unwelded.cpp  operand_not_welded.cpp
tests/python/: CMakeLists.txt  conftest.py  gen_opaque_gen.cpp  gen_trampolines_gen.cpp  pyproject.toml  test_chaining.py  test_copying.py  test_doc.py  test_enums.py  test_gen_opaque.py  test_gen_trampolines.py  test_inheritance.py  test_methods.py  test_namespace.py  test_naming.py  test_nested.py  test_opaque.py  test_operators.py  test_overloads.py  test_properties.py  test_resolution.py  test_retpolicy.py  test_stl.py  test_templates.py  test_trampoline.py  test_types.mypy-testing  test_unions.py
tests/python/nanobind/: CMakeLists.txt
tests/python/nanobind/cpp/: bindings.cpp  caster.hpp  trust.hpp
tests/python/pybind11/: CMakeLists.txt
tests/python/pybind11/cpp/: bindings.cpp  caster.hpp  trust.hpp
tests/sol2/: CMakeLists.txt  runner.cpp  test.lua
tests/sol2/cpp/: bindings.cpp
(+93 files in other folders)
