[project]
name = "welder-docs"
version = "0.0.0"
description = "Documentation site for welder (mkdocs-material + Doxygen reference)"
requires-python = ">=3.11"
dependencies = []

# Managed by uv, mirroring tests/. The docs/CMakeLists.txt syncs this env and runs
# `mkdocs build` from it. `lark` is here too because the Doxygen reference is
# generated through tools/welder_doxygen_filter.py, and Doxygen invokes that filter
# with *this* interpreter (the only one guaranteed to have lark).
[dependency-groups]
dev = [
    "mkdocs-material>=9.5",
    "mkdocs>=1.6",
    "lark>=1.2",
]
